--- a/page-template/index.html
+++ b/page-template/index.html
@@ -168,13 +168,51 @@
 
   <main class="pgHome">
     <section class="pgHome__banners">
-      <data class="pgHome__banners__banner">  
-
-      </data>
+      <div class="pgHome__banners__banner">  
+        <img class="pgHome__banners__banner__img" src="/img/banner.png" alt="" />
+      </div>
 
       <div class="pgHome__banners__contents">
-        
+        <div class="container">
+          <div class="pgHome__banners__contents__content">
+            <h1 class="pgHome__banners__contents__content__title">Duis aute irure dolor in <mark>reprehenderit</mark> in velit esse cillum</h1>
+    
+            <p class="pgHome__banners__contents__content__text">Excepteur sint occaecat cupidatat non proident, sunt in<br> culpa qui officia deserunt mollit anim id est </p>
+          </div>
+        </div>
       </div>
+
+      <ul class="pgHome__banners__quickAcess">
+        <div class="container">
+          <li class="pgHome__banners__quickAcess__item">
+            <a class="pgHome__banners__quickAcess__item__link" href="#">
+              <img class="pgHome__banners__quickAcess__item__img" src="/img/icons/Central-de-Resultados.png" alt="" />
+              Central de Resultados
+            </a>
+          </li>
+
+          <li class="pgHome__banners__quickAcess__item">
+            <a class="pgHome__banners__quickAcess__item__link" href="#">
+              <img class="pgHome__banners__quickAcess__item__img" src="/img/icons/Apresentação-Institucional.png" alt="" />
+              Apresentação Institucional
+            </a>
+          </li>
+
+          <li class="pgHome__banners__quickAcess__item">
+            <a class="pgHome__banners__quickAcess__item__link" href="#">
+              <img class="pgHome__banners__quickAcess__item__img" src="/img/icons/Fale-com-RI.png" alt="" />
+              Fale com o RI
+            </a>
+          </li>
+
+          <li class="pgHome__banners__quickAcess__item">
+            <a class="pgHome__banners__quickAcess__item__link" href="#"> 
+              <img class="pgHome__banners__quickAcess__item__img" src="/img/icons/Cadastre-se-no-Mailing.png" alt="" />
+              Cadastre-se no Mailing
+            </a>
+          </li>
+        </div>
+      </ul>
     </section>
   </main>
   
