create boxs desk/mobile

--- a/page-template/index.html
+++ b/page-template/index.html
@@ -167,6 +167,8 @@
   </header>
 
   <main class="pgHome">
+
+     <!-- Banners -->
     <section class="pgHome__banners">
       <div class="pgHome__banners__banner">  
         <img class="pgHome__banners__banner__img" src="/img/banner.png" alt="" />
@@ -214,6 +216,174 @@
         </div>
       </ul>
     </section>
+
+    <!-- Boxs -->
+    <section class="pgHome__boxs">
+      <div class="container">
+        <article class="pgHome__boxs__result">
+          <h2 class="pgHome__boxs__result__title">Resultados <span>3T24</span></h2>
+
+          <ul class="pgHome__boxs__result__list">
+            <li class="pgHome__boxs__result__list__item">
+              <a class="pgHome__boxs__result__list__item__link" href="">
+                <span class="pgHome__boxs__result__list__item__link__leftIcon">
+                  <img src="/img/icons/file.png" alt="file" />
+                </span>
+                Relatório da Administração
+                <span class="pgHome__boxs__result__list__item__link__rightIcon">
+                  <img src="/img/icons/Download.png" alt="download" />
+                </span>
+              </a>
+            </li>
+
+            <li class="pgHome__boxs__result__list__item">
+              <a class="pgHome__boxs__result__list__item__link" href="">
+                <span class="pgHome__boxs__result__list__item__link__leftIcon">
+                  <img src="/img/icons/Demonstrações-Contábeis.png" alt="file" />
+                </span>
+                Demonstrações Contábeis
+                <span class="pgHome__boxs__result__list__item__link__rightIcon">
+                  <img src="/img/icons/Download.png" alt="download" />
+                </span>
+              </a>
+            </li>
+
+            <li class="pgHome__boxs__result__list__item">
+              <a class="pgHome__boxs__result__list__item__link" href="">
+                <span class="pgHome__boxs__result__list__item__link__leftIcon">
+                  <img src="/img/icons/Apresentação-da-Teleconferência.png" alt="file" />
+                </span>
+                Apresentação da Teleconferência
+                <span class="pgHome__boxs__result__list__item__link__rightIcon">
+                  <img src="/img/icons/Download.png" alt="download" />
+                </span>
+              </a>
+            </li>
+
+            <li class="pgHome__boxs__result__list__item">
+              <a class="pgHome__boxs__result__list__item__link" href="">
+                <span class="pgHome__boxs__result__list__item__link__leftIcon">
+                  <img src="/img/icons/Apresentação-Institucional2.png" alt="file" />
+                </span>
+                Apresentação Institucional
+                <span class="pgHome__boxs__result__list__item__link__rightIcon">
+                  <img src="/img/icons/Download.png" alt="download" />
+                </span>
+              </a>
+            </li>
+
+            <li class="pgHome__boxs__result__list__item">
+              <a class="pgHome__boxs__result__list__item__link" href="">
+                <span class="pgHome__boxs__result__list__item__link__leftIcon">
+                  <img src="/img/icons/Boletim-Trimestral.png" alt="file" />
+                </span>
+                Boletim Trimestral
+                <span class="pgHome__boxs__result__list__item__link__rightIcon">
+                  <img src="/img/icons/Download.png" alt="download" />
+                </span>
+              </a>
+            </li>
+          </ul>
+
+          <a class="pgHome__boxs__result__btn" href="">
+            Saiba mais
+          </a>
+        </article>
+
+        <article class="pgHome__boxs__news">
+          <h2 class="pgHome__boxs__news__title">Últimas Notícias</h2>
+
+          <ul class="pgHome__boxs__news__list">
+            <li class="pgHome__boxs__news__list__item">
+              <a class="pgHome__boxs__result__list__item__link" href="">
+                <time class="pgHome__boxs__news__list__item__link__time">23 MAR</time>
+                Amet minim mollit non deserunt...
+                
+              </a>
+            </li>
+
+            <li class="pgHome__boxs__news__list__item">
+              <a class="pgHome__boxs__result__list__item__link" href="">
+                <time class="pgHome__boxs__news__list__item__link__time">23 MAR</time>
+                Amet minim mollit non deserunt...
+              </a>
+            </li>
+
+            <li class="pgHome__boxs__news__list__item">
+              <a class="pgHome__boxs__result__list__item__link" href="">
+                <time class="pgHome__boxs__news__list__item__link__time">23 MAR</time>
+                Amet minim mollit non deserunt...
+              </a>
+            </li>
+
+            <li class="pgHome__boxs__news__list__item">
+              <a class="pgHome__boxs__result__list__item__link" href="">
+                <time class="pgHome__boxs__news__list__item__link__time">23 MAR</time>
+                Amet minim mollit non deserunt...
+              </a>
+            </li>
+
+            <li class="pgHome__boxs__news__list__item">
+              <a class="pgHome__boxs__result__list__item__link" href="">
+                <time class="pgHome__boxs__news__list__item__link__time">23 MAR</time>
+                Amet minim mollit non deserunt...
+              </a>
+            </li>
+          </ul>
+
+          <a class="pgHome__boxs__news__btn" href="">
+            Saiba mais
+          </a>
+        </article>
+
+        <article class="pgHome__boxs__events">
+          <h2 class="pgHome__boxs__events__title">Próximos Eventos</h2>
+
+          <ul class="pgHome__boxs__events__list">
+            <li class="pgHome__boxs__events__list__item">
+              <a class="pgHome__boxs__result__list__item__link" href="">
+                <time class="pgHome__boxs__news__list__item__link__time">23 JUN</time>
+                Resultados financeiros 4T23
+              </a>
+            </li>
+
+            <li class="pgHome__boxs__events__list__item">
+              <a class="pgHome__boxs__result__list__item__link" href="">
+                <time class="pgHome__boxs__news__list__item__link__time">23 JUN</time>
+                Resultados financeiros 4T23
+              </a>
+            </li>
+
+            <li class="pgHome__boxs__events__list__item">
+              <a class="pgHome__boxs__result__list__item__link" href="">
+                <time class="pgHome__boxs__news__list__item__link__time">23 JUN</time>
+                Resultados financeiros 4T23
+              </a>
+            </li>
+
+            <li class="pgHome__boxs__events__list__item">
+              <a class="pgHome__boxs__result__list__item__link" href="">
+                <time class="pgHome__boxs__news__list__item__link__time">23 JUN</time>
+                Resultados financeiros 4T23
+              </a>
+            </li>
+
+            <li class="pgHome__boxs__events__list__item">
+              <a class="pgHome__boxs__result__list__item__link" href="">
+                <time class="pgHome__boxs__news__list__item__link__time">23 JUN</time>
+                Resultados financeiros 4T23
+              </a>
+            </li>
+          </ul>
+
+          <a class="pgHome__boxs__events__btn" href="">
+            Saiba mais
+          </a>
+        </article>
+      </div>
+    </section>
+
+    
   </main>
   
 </body>
