create AboutCobasi desk/mobile

--- a/page-template/index.html
+++ b/page-template/index.html
@@ -383,7 +383,28 @@
       </div>
     </section>
 
-    
+    <section class="pgHome__aboutCobasi">
+      <div class="container">
+          <div class="pgHome__aboutCobasi__left">
+            <div class="pgHome__aboutCobasi__left__img">
+              <img src="/img/Sobre-a-Cobasi.png" alt="Sobre a Cobasi" />
+            </div>
+          </div>
+  
+          <article class="pgHome__aboutCobasi__right">
+            <div class="pgHome__aboutCobasi__right__contents">
+              <h3 class="pgHome__aboutCobasi__right__contents__title">Sobre a <strong>Cobasi</strong></h3>
+  
+              <p class="pgHome__aboutCobasi__right__contents__text">A Cobasi é mais do que uma pet shop online. Nós abastecemos a parte divertida do seu lar e conectamos você com o que há de melhor na vida. Aqui você encontra uma diversidade incrível de produtos essenciais para cães, gatos, roedores, aves e outros animais, além de uma infinidade também para aquarismo, jardinagem e sua casa.</p>
+  
+              <a class="pgHome__aboutCobasi__right__contents__link" href="#">
+                Saiba mais 
+                <img class="pgHome__aboutCobasi__right__contents__link__img" src="/img/icons/arrow-outward.png" alt="" />
+              </a>
+            </div>
+          </article>
+        </div>
+    </section>
   </main>
   
 </body>
