create OurNumbers desk/mobile

--- a/page-template/index.html
+++ b/page-template/index.html
@@ -383,6 +383,7 @@
       </div>
     </section>
 
+    <!-- About Cobasi -->
     <section class="pgHome__aboutCobasi">
       <div class="container">
           <div class="pgHome__aboutCobasi__left">
@@ -404,6 +405,46 @@
             </div>
           </article>
         </div>
+    </section>
+
+    <section class="pgHome__ourNumbers">
+      <div class="container">
+        <div class="pgHome__ourNumbers__top">
+          <h4 class="pgHome__ourNumbers__top__title">Nossos Números</h4>
+        </div>
+  
+        <div class="pgHome__ourNumbers__bottom">
+          <div class="pgHome__ourNumbers__bottom__boxs">
+             <div class="pgHome__ourNumbers__bottom__boxs__box">
+                <span class="pgHome__ourNumbers__bottom__boxs__box__number"><mark>+</mark>500m</span>
+
+                <div class="pgHome__ourNumbers__bottom__boxs__box__contents">
+                  <span class="pgHome__ourNumbers__bottom__boxs__box__contents__subtitle">Short summary of step</span>
+                  <p class="pgHome__ourNumbers__bottom__boxs__box__contents__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum.</p>
+                </div>
+             </div>
+             
+             <div class="pgHome__ourNumbers__bottom__boxs__box">
+              <span class="pgHome__ourNumbers__bottom__boxs__box__number"><mark>+</mark>500m</span>
+
+              <div class="pgHome__ourNumbers__bottom__boxs__box__contents">
+                <span class="pgHome__ourNumbers__bottom__boxs__box__contents__subtitle">Short summary of step</span>
+                <p class="pgHome__ourNumbers__bottom__boxs__box__contents__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum.</p>
+              </div>
+             </div>
+
+             <div class="pgHome__ourNumbers__bottom__boxs__box">
+              <span class="pgHome__ourNumbers__bottom__boxs__box__number"><mark>+</mark>375k</span>
+
+              <div class="pgHome__ourNumbers__bottom__boxs__box__contents">
+                <span class="pgHome__ourNumbers__bottom__boxs__box__contents__subtitle">Short summary of step</span>
+                <p class="pgHome__ourNumbers__bottom__boxs__box__contents__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum.</p>
+              </div>
+             </div>
+           </div>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
   
