--- a/page-template/index.html
+++ b/page-template/index.html
@@ -407,6 +407,7 @@
         </div>
     </section>
 
+    <!-- ourNumbers-->
     <section class="pgHome__ourNumbers">
       <div class="container">
         <div class="pgHome__ourNumbers__top">
@@ -446,6 +447,56 @@
         </div>
       </div>
     </section>
+
+    <footer class="footer">
+      <div class="footer__logo">
+        <a class="footer__logo__link" href="">
+          <img class="footer__logo__link__img" src="/img/logo/logo.png" alt="Cobasi" />
+        </a>
+      </div>
+
+      <div class="footer__navgation">
+        <ul class="footer__navgation__list">
+          <li class="footer__navgation__list__item">
+            <a class="footer__navgation__list__item__link" href="">
+              A Companhia
+
+              <ul class="sublist">
+                <li class="sublist__item">
+                  <a class="sublist__item__link" href="">Quem somos</a>
+                </li>
+              </ul>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="footer__acess">
+        <div class="footer__acess__Contact">
+          <p class="footer__acess__Contact__text">Contato</p>
+
+          <ul class="footer__acess__Contact__list">
+            <li class="footer__acess__Contact__list__item">
+              <a class="footer__acess__Contact__list__item__link" href="">
+                <img class="footer__acess__Contact__list__item__link__img" src="" alt="" />
+                emaildeexemplo@gmail.com
+              </a>
+            </li>
+
+            <li class="footer__acess__Contact__list__item">
+              <a class="footer__acess__Contact__list__item__link" href="">
+                <img class="footer__acess__Contact__list__item__link__img" src="" alt="" />
+                (11) 94000-0000
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="footer__acess">
+        
+      </div>
+    </footer>
   </main>
   
 </body>
