create footer desk/mobile

--- a/page-template/index.html
+++ b/page-template/index.html
@@ -449,52 +449,196 @@
     </section>
 
     <footer class="footer">
-      <div class="footer__logo">
-        <a class="footer__logo__link" href="">
-          <img class="footer__logo__link__img" src="/img/logo/logo.png" alt="Cobasi" />
-        </a>
-      </div>
+      <div class="container">
+        <div class="footer__logo">
+          <a class="footer__logo__link" href="">
+            <img class="footer__logo__link__img" src="/img/logo/logo.png" alt="Cobasi" />
+          </a>
+        </div>
 
-      <div class="footer__navgation">
-        <ul class="footer__navgation__list">
-          <li class="footer__navgation__list__item">
-            <a class="footer__navgation__list__item__link" href="">
-              A Companhia
-
+        <div class="footer__navgation">
+          <ul class="footer__navgation__list">
+            <li class="footer__navgation__list__item">
+              <a class="footer__navgation__list__item__link" href="">A Companhia</a>
               <ul class="sublist">
                 <li class="sublist__item">
                   <a class="sublist__item__link" href="">Quem somos</a>
                 </li>
+
+                <li class="sublist__item">
+                  <a class="sublist__item__link" href="">Histórico</a>
+                </li>
+
+                <li class="sublist__item">
+                  <a class="sublist__item__link" href="">Missão, Visão e Valores</a>
+                </li>
+
+                <li class="sublist__item">
+                  <a class="sublist__item__link" href="">Sustentabilidades</a>
+                </li>
               </ul>
-            </a>
-          </li>
-        </ul>
-      </div>
-
-      <div class="footer__acess">
-        <div class="footer__acess__Contact">
-          <p class="footer__acess__Contact__text">Contato</p>
-
-          <ul class="footer__acess__Contact__list">
-            <li class="footer__acess__Contact__list__item">
-              <a class="footer__acess__Contact__list__item__link" href="">
-                <img class="footer__acess__Contact__list__item__link__img" src="" alt="" />
-                emaildeexemplo@gmail.com
-              </a>
             </li>
 
-            <li class="footer__acess__Contact__list__item">
-              <a class="footer__acess__Contact__list__item__link" href="">
-                <img class="footer__acess__Contact__list__item__link__img" src="" alt="" />
-                (11) 94000-0000
-              </a>
+            <li class="footer__navgation__list__item">
+              <a class="footer__navgation__list__item__link" href="">Governança Corporativa</a>
+              <ul class="sublist">
+                <li class="sublist__item">
+                  <a class="sublist__item__link" href="">Visão Geral</a>
+                </li>
+
+                <li class="sublist__item">
+                  <a class="sublist__item__link" href="">Estrutura Societária</a>
+                </li>
+
+                <li class="sublist__item">
+                  <a class="sublist__item__link" href="">Composição Acionária</a>
+                </li>
+
+                <li class="sublist__item">
+                  <a class="sublist__item__link" href="">Diretoria, Conselhos e Comitês</a>
+                </li>
+
+                <li class="sublist__item">
+                  <a class="sublist__item__link" href="">Estatuto, Códigos e Políticas</a>
+                </li>
+              </ul>
+            </li>
+
+            <li class="footer__navgation__list__item">
+              <a class="footer__navgation__list__item__link" href="">Informações Financeiras</a>
+              <ul class="sublist">
+                <li class="sublist__item">
+                  <a class="sublist__item__link" href="">Documentos CVM</a>
+                </li>
+
+                <li class="sublist__item">
+                  <a class="sublist__item__link" href="">Central de Resultados</a>
+                </li>
+
+                <li class="sublist__item">
+                  <a class="sublist__item__link" href="">Avisos, Comunicados e Fatos Relevantes</a>
+                </li>
+
+                <li class="sublist__item">
+                  <a class="sublist__item__link" href="">Apresentações e Teleconferência</a>
+                </li>
+
+                <li class="sublist__item">
+                  <a class="sublist__item__link" href="">Planilha Dinâmica</a>
+                </li>
+              </ul>
+            </li>
+
+            <li class="footer__navgation__list__item">
+              <a class="footer__navgation__list__item__link" href="">Serviços aos Investidores</a>
+              <ul class="sublist">
+                <li class="sublist__item">
+                  <a class="sublist__item__link" href="">Cadastre-se no Mailing</a>
+                </li>
+
+                <li class="sublist__item">
+                  <a class="sublist__item__link" href="">Calendário de Eventos</a>
+                </li>
+
+                <li class="sublist__item">
+                  <a class="sublist__item__link" href="">Cobertura de Analistas</a>
+                </li>
+
+                <li class="sublist__item">
+                  <a class="sublist__item__link" href="">Cotações e Gráficos</a>
+                </li>
+
+                <li class="sublist__item">
+                  <a class="sublist__item__link" href="">Fale com RI</a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
-      </div>
 
-      <div class="footer__acess">
-        
+        <div class="footer__access">
+          <div class="footer__access__contact">
+            <span class="footer__access__contact__title">Contato</span>
+
+            <ul class="footer__access__contact__list">
+              <li class="footer__access__contact__list__item">
+                <a class="footer__access__contact__list__item__link" href="">
+                  <img class="footer__access__contact__list__item__link__img" src="/img/icons/mensagem.png" alt="mensagem" />
+                  emaildeexemplo@gmail.com
+                </a>
+              </li>
+
+              <li class="footer__access__contact__list__item">
+                <a class="footer__access__contact__list__item__link" href="">
+                  <img class="footer__access__contact__list__item__link__img" src="/img/icons/telephone.png" alt="telephone" />
+                  (11) 94000-0000
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer__access__address">
+            <span class="footer__access__address__title">Endereço:</span>
+
+            <p class="footer__access__address__text">Av. Fernando Cerqueira César Coimbra, nº 210, Galpão A Alphaville Industrial, Barueri - SP CEP: 06465-06</p>
+          </div>
+
+          <div class="footer__access__socialMedia">
+            <span class="footer__access__socialMedia__title">Siga nas redes</span>
+
+            <ul class="footer__access__socialMedia__list">
+              <li class="footer__access__socialMedia__list__item">
+                <a class="footer__access__socialMedia__list__item__link" href="">
+                  <img class="footer__access__socialMedia__list__item__link__img" src="/img/icons/f.png" alt="icon" />
+                </a>
+              </li>
+
+              <li class="footer__access__socialMedia__list__item">
+                <a class="footer__access__socialMedia__list__item__link" href="">
+                  <img class="footer__access__socialMedia__list__item__link__img" src="/img/icons/i.png" alt="icon" />
+                </a>
+              </li>
+
+              <li class="footer__access__socialMedia__list__item">
+                <a class="footer__access__socialMedia__list__item__link" href="">
+                  <img class="footer__access__socialMedia__list__item__link__img" src="/img/icons/x.png" alt="icon" />
+                </a>
+              </li>
+
+              <li class="footer__access__socialMedia__list__item">
+                <a class="footer__access__socialMedia__list__item__link" href="">
+                  <img class="footer__access__socialMedia__list__item__link__img" src="/img/icons/y.png" alt="icon" />
+                </a>
+              </li>
+
+              <li class="footer__access__socialMedia__list__item">
+                <a class="footer__access__socialMedia__list__item__link" href="">
+                  <img class="footer__access__socialMedia__list__item__link__img" src="/img/icons/linkedin.png" alt="icon" />
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="footer__bottom">
+          <div class="footer__bottom__copy">
+            <p class="footer__bottom__copy__text">Copyright © 2024 Cobasi. Todos os direitos reservados.</p>
+          </div>
+
+          <div class="footer__bottom__mz">
+            <a class="footer__bottom__copy__text" href="#">Powered by <strong>MZ</strong></a>
+          </div>
+
+          <ul class="footer__bottom__links">
+            <li class="footer__bottom__links__item">
+              <a class="footer__bottom__links__item__link" href="">Termos e condições de uso</a>
+            </li>
+
+            <li class="footer__bottom__links__item">
+              <a class="footer__bottom__links__item__link" href="">Políticas privacidade</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </main>
