--- a/page-template/index.html
+++ b/page-template/index.html
@@ -9,7 +9,7 @@
   <!-- Favicon -->
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
-<body>
+<body id="body">
   
   <header class="header">
 
@@ -697,8 +697,16 @@
         </div>
       </div>
     </footer>
+
+     <!-- ScrollUp -->
+    <a class="scrollup js-scroll" href="#body">
+      <svg class="uil uil-arrow-up scrollup__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);">
+        <path d="M13 18v-6h5l-6-7-6 7h5v6z"></path>
+      </svg>
+    </a>
   </main>
   
   <script src="/js/header.js"></script>
+  <script src="/js/scrollup.js"></script>
 </body>
 </html>
