create slick banner na section links de facil acessos

--- a/page-template/index.html
+++ b/page-template/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
   <link rel="stylesheet" href="/style.css" />
   <title>Cobasi RI</title>
   <!-- Favicon -->
@@ -241,7 +242,7 @@
       </div>
 
       <ul class="pgHome__banners__quickAcess">
-        <div class="container">
+        <div class="container slicks">
           <li class="pgHome__banners__quickAcess__item">
             <a class="pgHome__banners__quickAcess__item__link" href="#">
               <img class="pgHome__banners__quickAcess__item__img" src="/img/icons/Central-de-Resultados.png" alt="" />
@@ -706,7 +707,12 @@
     </a>
   </main>
   
+  <!--JQuery-->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
   <script src="/js/header.js"></script>
   <script src="/js/scrollup.js"></script>
+  <script src="/js/slick.js"></script>
 </body>
 </html>
